--- a/package.json
+++ b/package.json
@@ -6,12 +6,26 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@walletconnect/qrcode-modal": "^1.4.0",
+    "ag-grid-community": "^25.1.0",
+    "ag-grid-react": "^25.1.0",
+    "bignumber.js": "^9.0.1",
+    "bootstrap": "^4.6.0",
+    "ethereumjs-tx-es5": "^1.3.5",
+    "gh-pages": "^3.1.0",
+    "jquery": "^3.6.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "web3": "^1.3.4",
+    "web3modal": "^1.9.3"
   },
+  "homepage": "https://github.com/thelambodan/bsc-timer.git",
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
